intTests/test_parse_errors/parser009.log.good
Loading file "parser009.saw"
parser009.saw:8:1-8:7: Error: Syntax error: missing ';'
FAILED
